--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,6 +6,7 @@ sky:
     database: sky_take_out
     username: root
     password: hzxfhccp414
+  # todo 阿里云敏感信息
   alioss:
     endpoint:
     access-key-id:
@@ -16,3 +17,7 @@ sky:
     port: 6379
     password:
     database: 10
+    # todo 小程序敏感信息
+  wechat:
+    appid:
+    secret:
